--- a/resources/static/system/pages/wesign/documents/index.html
+++ b/resources/static/system/pages/wesign/documents/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>保全中心 | 云取证</title>
+<title>蜗云 | 文件中心</title>
 <div th:replace="system/pages/common/sys-quote-common.html :: copy-syscommon-headerstyle"></div>
 <link rel="stylesheet" href="../../css/simple-pagination.css" th:href="@{/static/system/css/simple-pagination.css}">
 </head>
