--- a/resources/static/system/pages/common/login-common.html
+++ b/resources/static/system/pages/common/login-common.html
@@ -34,12 +34,12 @@
 		<div th:replace="system/pages/common/browser-common.html :: copy-browser">动态复用</div>
 		<div id="header">
 			<div class="container-new">
-				<div class="logo-new"><a href="javascript:void(0);" th:href="@{${#httpServletRequest.getScheme()}+'://'+${#httpServletRequest.getServerName()}+':'+${#httpServletRequest.getServerPort()}+${#httpServletRequest.getContextPath()}}"></a></div>
-				<div class="login-area">
+				<div class="logo-new"><a href="javascript:void(0);" th:href="@{${#httpServletRequest.getScheme()}+'://'+${#httpServletRequest.getServerName()}+':'+${#httpServletRequest.getServerPort()}+${#httpServletRequest.getContextPath()}}"><div class="logdiv"><i class="icon-cloud"></i>蜗云</div></a></div>
+				<!-- <div class="login-area">
 					<ul>
 						<li title="关于云取证"><a href="http://www.signit.cn/" th:href="@{${#httpServletRequest.getScheme()}+'://'+${#httpServletRequest.getServerName()}+':'+${#httpServletRequest.getServerPort()}+${#httpServletRequest.getContextPath()}}" target="_blank">关于云取证</a></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>	<!-- end:copy-login-header -->
