--- a/resources/static/system/pages/wesign/register.html
+++ b/resources/static/system/pages/wesign/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <div th:replace="system/pages/common/login-common.html :: copy-common-head"></div>
-<title>立即注册|云取证</title>
+<title>立即注册|蜗云</title>
 </head>
 <body>
 	<div th:replace="system/pages/common/login-common.html :: copy-login-header"></div>
@@ -11,7 +11,7 @@
 			<h2 class="reg-title">注册账号</h2>
 			<form id="registerForm" action="#" th:action="@{/wesign/register.html}" th:object="${registerForms}" method="POST">
 				<div class="mb10">
-					<label for="email" class="info-label">请输入邮箱或者手机:</label>
+					<label for="email" class="info-label">请输入邮箱:</label>
 					<input type="text" name="email" th:field="*{username}" id="emailOrPhone" class="info-input">
 					<span class="errorWarning"></span>
 				</div>
@@ -45,22 +45,26 @@
 				</div> -->
 				<div class="mt26" th:switch="${error}">
 					<input type="button" value="立即注册" class="loginRegistBtn" id="regSubmitBtn">
+					<a class="login" th:href="@{/wesign/login.html}">已有账号，立即登录</a>
 					<span id="js_register_error" class="errorWarning"></span>
 					<span th:case="'disabled'" class="tipWarning">账户尚未激活，<a class="errorWarning activeNow" th:href="${resultUrl}">立即激活？</a></span>
 					<span th:case="*" th:text=${error} class="tipWarning"/>
 		        </div> 
 		        <!-- <p class="tipNormal registItem">点击注册即同意我们的<a th:href=@{/state.html} target="_blank">服务条款</a></p> -->
 			</form>
-			<div class="exitContain">
+			<!-- <div class="exitContain">
 				<img class="exitImg" alt="您还不是易企签的用户？ 马上加入我们吧" src="../../images/s-joinSignit.jpg" th:src="@{/static/system/images/s-joinSignit.jpg}">
 				<p class="queryJoin">您还不是我们的用户？<br/><span class="font18">马上加入我们吧</span></p>
 				<p class="theseJoin"><span id="userNumber">电子证据保全</span><br/>让权益保护不再难！</p>
 				<a th:href="@{/wesign/login.html}" class="borderBtn">已有账号，登录</a>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	
-	<div th:replace="system/pages/common/login-common.html :: copy-login-footer"></div>
+	<script  src="../../../common/js/jquery.min.js" th:src=@{/static/common/js/jquery.min.js} type="text/javascript"></script>
+		<script src="../../../common/js/spark-md5.min.js" th:src=@{/static/common/js/spark-md5.min.js} type="text/javascript"></script>
+		<script src="../../../common/js/jquery.cookie.min.js"  th:src=@{/static/common/js/jquery.cookie.min.js} type="text/javascript"></script>
+		<script src="../../../common/js/jquery.enplaceholder.js" th:src=@{/static/common/js/jquery.enplaceholder.js} type="text/javascript"></script>
 <script src="../../js/regist.js" th:src="@{/static/system/js/regist.js}" type="text/javascript"></script>
 </body>
 </html>
