--- a/resources/static/system/pages/wesign/seals/index.html
+++ b/resources/static/system/pages/wesign/seals/index.html
@@ -5,6 +5,7 @@
 <title>签名管理 | 易企签</title>
 <div th:replace="system/pages/common/sys-quote-common.html :: copy-syscommon-headerstyle"></div>
 <link rel="stylesheet" href="../../css/doc-sign.css" th:href="@{/static/system/css/doc-sign.css}"/>
+<link rel="stylesheet" href="../../css/doc-sign.css" th:href="@{/static/system/css/bodyfile.css}"/>
 </head>
 <body>
 <div th:replace="system/pages/common/browser-common.html :: copy-browser">动态复用</div>
