--- a/resources/static/system/pages/common/sys-bar-common.html
+++ b/resources/static/system/pages/common/sys-bar-common.html
@@ -77,7 +77,7 @@
 			<div class="dis-inline">
 			 	<span id="user-menu" class="mlr10 posR posR-top3 user-msg-tooltip">
 				 	  <i class="icon-user-hollow fs24"></i>
-				      <span id="user-header-name" th:text="${session.loginUser.availableUserName()}"></span>
+				      <span id="user-header-name" style="">设置</span>
 				      <i class="icon-keyboard-arrow-down"></i>
 				      <div id="userMenu-msg-mod" class="msg-mod hidden">
 			 			<div class="userMenu-content" id="id-userMenu-content">
