--- a/resources/static/system/pages/common/sys-quote-common.html
+++ b/resources/static/system/pages/common/sys-quote-common.html
@@ -25,7 +25,7 @@
 		<!--有的双核浏览器其中一核使用的就是IE内核，但是默认并不会调用最高版本,让浏览器自动调用最高版本的IE-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-		<link rel="icon" href="../../../common/images/logo-ico.ico" th:href="@{/static/common/images/logo-ico.ico}" type="image/x-icon">
+		<link rel="icon" href="../../../common/images/cloude-2.png" th:href="@{/static/common/images/cloude-2.png}">
 		<link rel="stylesheet" href="../../css/base.css" th:href="@{/static/system/css/base.css}">
 		<link rel="stylesheet" href="../../../common/fonts/style.css" th:href="@{/static/common/fonts/style.css}">
 		<!--[if lt IE 8]>
