--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -4,6 +4,7 @@
 <title>蜗云 | 文件中心</title>
 <div th:replace="system/pages/common/sys-quote-common.html :: copy-syscommon-headerstyle"></div>
 <link rel="stylesheet" href="../../css/simple-pagination.css" th:href="@{/static/system/css/simple-pagination.css}">
+<link rel="stylesheet"  th:href="@{/static/system/css/layui.css}"/>
 <link rel="stylesheet"  th:href="@{/static/system/css/bodyfile.css}"/>
 </head>
 <body>
@@ -47,7 +48,7 @@
 			<div class="bodyFile" style="display:;">
 				<div class="myCook">
 					<div class="cook-left"><span>我的资料库</span></div>
-					<div class="cook-right"><button type="button" class="addBtn"><i class="icon-add-box"></i><span class="iconFont">新建资料库</span></button></div>
+					<div class="cook-right"><button type="button" class="addBtn" id="newRepos"><i class="icon-add-box"></i><span class="iconFont">新建资料库</span></button></div>
 				</div>
 				<div class="noneFile" style="display:none;">
 					<h2 class="font-create">您还未创建资料库</h2>
@@ -62,14 +63,8 @@
 					    <th class="th-4">大小</th>
 					    <th class="th-5">更新时间</th>
 					  </tr>
-					  <tbody>
-					  	<tr class="tr-border">
-						  	<th class="th-1"><input type="checkbox"/></th>
-						    <th class="th-2"><i class="icon-ownsign-hollow all-icon"></i>资料库</th>
-						    <th class="th-3"><i class="icon-bin all-icon"></i><i class="icon-write-down all-icon deal-method"></i></th>
-						    <th class="th-4">12.Mb</th>
-						    <th class="th-5">22小时前</th>
-					  	</tr>
+					  <tbody id="repo-table">
+					  
 					  </tbody>
 					 </table>
 				</div>
@@ -137,6 +132,9 @@
 <div th:replace="system/pages/common/sys-quote-common.html  :: copy-sysbase-footer">此处footer动态复用</div>
 <div th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
 <script th:src="@{/static/common/js/jquery.simplePagination.js}" type="text/javascript"></script>
+<script th:src="@{/static/common/js/moment.js}" type="text/javascript"></script>
+<script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
+<script th:src="@{/static/system/js/open.js}" type="text/javascript"></script>
 <script th:src="@{/static/system/js/doctask.js}" type="text/javascript"></script>
 </body>
 </html>
