--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -17,28 +17,28 @@
 	      <div class="lbar">
 	      		<div class="lbar-block">
 			        <ul id="doc-id-bar" class="lbar-link" name="1">
-			            <li id="" class="active">
-			            	<a href="javascript:;">
-			            		<i class=""></i>
-			            		<span class="lbar-link-title">我的文件</span>
+			            <li class="active">
+			            	<a id="id-myrepose" href="javascript:;">
+			            		<i class="icon-ownsign-hollow"></i>
+			            		<span class="lbar-link-title">我的资料库</span>
 			            	</a>
 						</li>
-			            <li id="">
+			            <li >
 			            	<a href="javascript:;">
-				            	<i class=""></i>
-				            	<span class="lbar-link-title">我的视频</span>
+				            	<i class="icon-file-word"></i>
+				            	<span class="lbar-link-title">我的文档</span>
 				            </a>
 				        </li>
-			            <li id="">
+			            <li >
 			            	<a href="javascript:;">
-			            		<i class=""></i>
-			            		<span class="lbar-link-title">我的图片</span>
+			            		<i class="icon-file-video"></i>
+			            		<span class="lbar-link-title">我的视频</span>
 			            	</a>
 			           </li>
 			           <li id="">
 			            	<a href="javascript:;">
-			            		<i class=""></i>
-			            		<span class="lbar-link-title">其他文件</span>
+			            		<i class="icon-tarsh-think"></i>
+			            		<span class="lbar-link-title">回收站</span>
 			            	</a>
 			           </li>
 			        </ul>
@@ -54,22 +54,28 @@
 					<h2 class="font-create">您还未创建资料库</h2>
 					<p>你可以新建一个资料库来组织你的文件资料，比如为每个项目创建一个资料库，每个资料库可以单独地同步和共享。</p>
 				</div>
-				<div class="first-table">
+				<div class="first-table" id="id-repose-content">
 					<table class="file-tab">
-					  <tr class="tr-border">
+					<thead class="repose">
+						<tr class="tr-border">
 					  	<th class="th-1"><input type="checkbox"/></th>
 					    <th class="th-2">名称</th>
-					    <th class="th-3"></th>
+					    <th class="th-3">操作</th>
 					    <th class="th-4">大小</th>
 					    <th class="th-5">更新时间</th>
 					  </tr>
+					</thead>
 					  <tbody id="repo-table">
 					  
 					  </tbody>
 					 </table>
 				</div>
+				 <div class="class-pagation">
+				 	<div id="id-pagate"></div>
+				 </div>
 			</div>
-			<div class="lookFile" style="display:;">
+			
+			<div class="lookFile" style="display:none;">
 				<div class=""><span><a class="a-hover" href="javascript:;">我的资料库</a></span><span class="path-split">/</span><span>资料库</span></div>
 				<div class="btn-choose">
 					<div class="div-input"><input type="file" class="btn-input" name="上传文件" id="upload-files" multiple/></div>
@@ -80,16 +86,18 @@
 					<span class="trash-file"><i class="icon-bin"></i><i class="icon-alarm"></i></span>
 				</div>
 			</div>
-			<div class="file-table" style="display:;">
+			<div class="file-table" style="display:none;">
 				<div>
 					<table class="file-tab">
-					  <tr class="tr-border">
-					  	<th class="th-1"><input type="checkbox"/></th>
-					    <th class="th-2">名称</th>
-					    <th class="th-3"></th>
-					    <th class="th-4">大小</th>
-					    <th class="th-5">更新时间</th>
-					  </tr>
+					<thead>
+						  <tr class="tr-border">
+						  	<th class="th-1"><input type="checkbox"/></th>
+						    <th class="th-2 text-align">名称</th>
+						    <th class="th-3"></th>
+						    <th class="th-4">大小</th>
+						    <th class="th-5">更新时间</th>
+						    </tr>
+					    </thead>		  
 					  <tbody>
 					  	<tr class="tr-border">
 						  	<th class="th-1"><input type="checkbox"/></th>
@@ -114,7 +122,7 @@
 </div>  
 
 
-<div id="deal-method" class="userMenu-content">
+<!-- <div id="deal-method" class="userMenu-content">
     <ul class="userMenu-content-list">
 		<li class="sign-Link signSelf">重命名</li>
 	</ul>
@@ -127,9 +135,8 @@
 		<li class="sign-Link signSelf">重命名</li>
 		<li class="sign-Link signSelf">移动</li>
 	</ul>
-</div>
+</div> -->
 <!--footer-->
-<div th:replace="system/pages/common/sys-quote-common.html  :: copy-sysbase-footer">此处footer动态复用</div>
 <div th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
 <script th:src="@{/static/common/js/jquery.simplePagination.js}" type="text/javascript"></script>
 <script th:src="@{/static/common/js/moment.js}" type="text/javascript"></script>
