1;建平叫提交

--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -36,7 +36,7 @@
 			            	</a>
 			           </li>
 			           <li id="">
-			            	<a href="javascript:;">
+			            	<a id="id-trash" href="javascript:;">
 			            		<i class="icon-tarsh-think"></i>
 			            		<span class="lbar-link-title">回收站</span>
 			            	</a>
