--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="../../css/simple-pagination.css" th:href="@{/static/system/css/simple-pagination.css}">
 <link rel="stylesheet"  th:href="@{/static/system/css/layui.css}"/>
 <link rel="stylesheet"  th:href="@{/static/system/css/bodyfile.css}"/>
+<link rel="stylesheet"  th:href="@{/static/system/css/uploadify.css}"/>
 </head>
 <body>
 <div th:replace="system/pages/common/browser-common.html :: copy-browser">动态复用</div>
@@ -45,9 +46,9 @@
 		        </div>  
 		</div>
 		<div class="rmain-main">
-			<div class="bodyFile" style="display:;">
+			<div class="bodyFile">
 				<div class="myCook">
-					<div class="cook-left"><span>我的资料库</span></div>
+					<div class="cook-left"><span id="id-globle">我的资料库</span></div>
 					<div class="cook-right"><button type="button" class="addBtn" id="newRepos"><i class="icon-add-box"></i><span class="iconFont">新建资料库</span></button></div>
 				</div>
 				<div class="noneFile" style="display:none;">
@@ -138,10 +139,11 @@
 </div> -->
 <!--footer-->
 <div th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
-<script th:src="@{/static/common/js/jquery.simplePagination.js}" type="text/javascript"></script>
+<script th:src="@{/static/common/js/jquery.uploadify.js}" type="text/javascript"></script>
 <script th:src="@{/static/common/js/moment.js}" type="text/javascript"></script>
 <script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
 <script th:src="@{/static/system/js/open.js}" type="text/javascript"></script>
+<script th:src="@{/static/system/js/repose_2.js}" type="text/javascript"></script>
 <script th:src="@{/static/system/js/doctask.js}" type="text/javascript"></script>
 </body>
 </html>
