--- a/resources/static/system/pages/common/sys-bar-common.html
+++ b/resources/static/system/pages/common/sys-bar-common.html
@@ -63,7 +63,7 @@
 	 <!-- ------------------------------------------- -->
 	 <div th:fragment="copy-headerbar" th:remove="tag">
 		 <div class="left-nav">
-			 <a th:href="@{'/wesign/index.html'}"><div class="logo">蜗云</div></a>
+			 <div class="logo-1">蜗云</div>
 		</div>	<!-- left-nav -->
 		<div class="right-nav">
 			<div class="dis-inline">
