--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -76,14 +76,11 @@
 				 </div>
 			</div>
 			
-			<div class="lookFile" style="display:none;">
-				<div class=""><span><a class="a-hover" href="javascript:;">我的资料库</a></span><span class="path-split">/</span><span>资料库</span></div>
+			<div class="lookFile hidden">
 				<div class="btn-choose">
-					<div class="div-input"><input type="file" class="btn-input" name="上传文件" id="upload-files" multiple/></div>
+					<button type="button" class="allBtn"><span class="allBtnFont">上传</span></button>
 					<button type="button" class="allBtn"><span class="allBtnFont">新建文件夹</span></button>
 					<button type="button" class="allBtn"><span class="allBtnFont">新建文件</span></button>
-					<button type="button" class="listBtn"><span class="allBtnFont">横向</span></button>
-					<button type="button" class="listBtn"><span class="allBtnFont">纵向</span></button>
 					<span class="trash-file"><i class="icon-bin"></i><i class="icon-alarm"></i></span>
 				</div>
 			</div>
