实现删除文件(夹)接口，没有实现UI

--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -141,6 +141,7 @@
 <script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
 <script th:src="@{/static/system/js/open.js}" type="text/javascript"></script>
 <script th:src="@{/static/system/js/repose_2.js}" type="text/javascript"></script>
+<script th:src="@{/static/system/js/fileOperation.js}" type="text/javascript"></script>
 <script th:src="@{/static/system/js/doctask.js}" type="text/javascript"></script>
 </body>
 </html>
