--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -51,7 +51,7 @@
 					<div class="cook-left"><span id="id-globle">我的资料库</span></div>
 					<div class="cook-right"><button type="button" class="addBtn" id="newRepos"><i class="icon-add-box"></i><span class="iconFont">新建资料库</span></button></div>
 				</div>
-				<div class="noneFile" style="display:none;">
+				<div class="noneFile hidden">
 					<h2 class="font-create">您还未创建资料库</h2>
 					<p>你可以新建一个资料库来组织你的文件资料，比如为每个项目创建一个资料库，每个资料库可以单独地同步和共享。</p>
 				</div>
@@ -71,69 +71,19 @@
 					  </tbody>
 					 </table>
 				</div>
-				 <div class="class-pagation">
-				 	<div id="id-pagate"></div>
-				 </div>
 			</div>
 			
 			<div class="lookFile hidden">
 				<div class="btn-choose">
 					<button type="button" class="allBtn"><span class="allBtnFont">上传</span></button>
-					<button type="button" class="allBtn"><span class="allBtnFont">新建文件夹</span></button>
+					<button type="button" class="allBtn" id="id-newfilder"><span class="allBtnFont">新建文件夹</span></button>
 					<button type="button" class="allBtn"><span class="allBtnFont">新建文件</span></button>
 					<span class="trash-file"><i class="icon-bin"></i><i class="icon-alarm"></i></span>
-				</div>
-			</div>
-			<div class="file-table" style="display:none;">
-				<div>
-					<table class="file-tab">
-					<thead>
-						  <tr class="tr-border">
-						  	<th class="th-1"><input type="checkbox"/></th>
-						    <th class="th-2 text-align">名称</th>
-						    <th class="th-3"></th>
-						    <th class="th-4">大小</th>
-						    <th class="th-5">更新时间</th>
-						    </tr>
-					    </thead>		  
-					  <tbody>
-					  	<tr class="tr-border">
-						  	<th class="th-1"><input type="checkbox"/></th>
-						    <th class="th-2"><i class="icon-receipt all-icon"></i>test.txt</th>
-						    <th class="th-3"><i class="icon-bin all-icon"></i><i class="icon-download3 all-icon"></i><i class="icon-write-down all-icon deal-method-child"></i></th>
-						    <th class="th-4">12.kb</th>
-						    <th class="th-5">22小时前</th>
-					  	</tr>
-					  	<tr class="tr-border">
-						  	<th class="th-1"><input type="checkbox"/></th>
-						    <th class="th-2"><i class="icon-my-library-books all-icon"></i>文件夹</th>
-						    <th class="th-3"><i class="icon-bin all-icon"></i><i class="icon-download3 all-icon"></i><i class="icon-write-down all-icon deal-method-child"></i></th>
-						    <th class="th-4">12.kb</th>
-						    <th class="th-5">22小时前</th>
-					  	</tr>
-					  </tbody>
-					 </table>
 				</div>
 			</div>
 		</div>
 	</div>  
 </div>  
-
-
-<!-- <div id="deal-method" class="userMenu-content">
-    <ul class="userMenu-content-list">
-		<li class="sign-Link signSelf">重命名</li>
-	</ul>
-</div>
-
-
-
-<div id="deal-method-child" class="userMenu-content">
-    <ul class="userMenu-content-list">
-		<li class="sign-Link signSelf">重命名</li>
-		<li class="sign-Link signSelf">移动</li>
-	</ul>
-</div> -->
 <!--footer-->
 <div th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
 <script th:src="@{/static/common/js/jquery.uploadify.js}" type="text/javascript"></script>
