--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -2,96 +2,106 @@
 <html>
 <head>
 <title>蜗云 | 文件中心</title>
-<div th:replace="system/pages/common/sys-quote-common.html :: copy-syscommon-headerstyle"></div>
-<link rel="stylesheet" href="../../css/simple-pagination.css" th:href="@{/static/system/css/simple-pagination.css}">
-<link rel="stylesheet"  th:href="@{/static/system/css/layui.css}"/>
-<link rel="stylesheet"  th:href="@{/static/system/css/bodyfile.css}"/>
-<link rel="stylesheet"  th:href="@{/static/system/css/uploadify.css}"/>
+<div
+	th:replace="system/pages/common/sys-quote-common.html :: copy-syscommon-headerstyle"></div>
+<link rel="stylesheet" href="../../css/simple-pagination.css"
+	th:href="@{/static/system/css/simple-pagination.css}">
+<link rel="stylesheet" th:href="@{/static/system/css/layui.css}" />
+<link rel="stylesheet" th:href="@{/static/system/css/bodyfile.css}" />
+<link rel="stylesheet" th:href="@{/static/system/css/uploadify.css}" />
 </head>
 <body>
-<div th:replace="system/pages/common/browser-common.html :: copy-browser">动态复用</div>
-<div class="container">
-	<div class="container-header">
-		<div th:replace="system/pages/common/sys-bar-common.html :: copy-headerbar">动态复用</div>
+	<div
+		th:replace="system/pages/common/browser-common.html :: copy-browser">动态复用</div>
+	<div class="container">
+		<div class="container-header">
+			<div
+				th:replace="system/pages/common/sys-bar-common.html :: copy-headerbar">动态复用</div>
+		</div>
+		<div class="rmain">
+			<div class="lbar">
+				<div class="lbar-block">
+					<ul id="doc-id-bar" class="lbar-link" name="1">
+						<li class="active"><a id="id-myrepose" href="javascript:;">
+								<i class="icon-ownsign-hollow"></i> <span
+								class="lbar-link-title">我的资料库</span>
+						</a></li>
+						<li><a id="id-myword" href="javascript:;"> <i
+								class="icon-file-word"></i> <span class="lbar-link-title">我的文档</span>
+						</a></li>
+						<li><a id="id-mymovei" href="javascript:;"> <i
+								class="icon-file-video"></i> <span class="lbar-link-title">我的视频</span>
+						</a></li>
+						<li id=""><a id="id-trash" href="javascript:;"> <i
+								class="icon-tarsh-think"></i> <span class="lbar-link-title">回收站</span>
+						</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="rmain-main">
+				<div class="bodyFile">
+					<div class="myCook">
+						<div class="cook-left">
+							<span id="id-globle">我的资料库</span>
+						</div>
+						<div class="cook-right">
+							<button type="button" class="addBtn" id="newRepos">
+								<i class="icon-add-box"></i><span class="iconFont">新建资料库</span>
+							</button>
+						</div>
+					</div>
+					<div class="noneFile hidden">
+						<h2 class="font-create">您还未创建资料库</h2>
+						<p>你可以新建一个资料库来组织你的文件资料，比如为每个项目创建一个资料库，每个资料库可以单独地同步和共享。</p>
+					</div>
+					<div class="first-table" id="id-repose-content">
+						<table class="file-tab">
+							<thead class="repose">
+								<tr class="tr-border">
+									<th class="th-1"><input type="checkbox" /></th>
+									<th class="th-2">名称</th>
+									<th class="th-3">操作</th>
+									<th class="th-4">大小</th>
+									<th class="th-5">更新时间</th>
+								</tr>
+							</thead>
+							<tbody id="repo-table">
+
+							</tbody>
+						</table>
+					</div>
+				</div>
+
+				<div class="lookFile hidden">
+					<div class="btn-choose">
+						<a href="javascript:;" class="file">上传文件 <input type="file"
+							name="" id=""/>
+						</a>
+						<button type="button" class="allBtn" id="id-newfilder">
+							<span class="allBtnFont">新建文件夹</span>
+						</button>
+						<button type="button" class="allBtn">
+							<span class="allBtnFont">新建文件</span>
+						</button>
+						<span class="trash-file"><i class="icon-bin"></i><i
+							class="icon-alarm"></i></span>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="rmain">
-	      <div class="lbar">
-	      		<div class="lbar-block">
-			        <ul id="doc-id-bar" class="lbar-link" name="1">
-			            <li class="active">
-			            	<a id="id-myrepose" href="javascript:;">
-			            		<i class="icon-ownsign-hollow"></i>
-			            		<span class="lbar-link-title">我的资料库</span>
-			            	</a>
-						</li>
-			            <li >
-			            	<a href="javascript:;">
-				            	<i class="icon-file-word"></i>
-				            	<span class="lbar-link-title">我的文档</span>
-				            </a>
-				        </li>
-			            <li >
-			            	<a href="javascript:;">
-			            		<i class="icon-file-video"></i>
-			            		<span class="lbar-link-title">我的视频</span>
-			            	</a>
-			           </li>
-			           <li id="">
-			            	<a id="id-trash" href="javascript:;">
-			            		<i class="icon-tarsh-think"></i>
-			            		<span class="lbar-link-title">回收站</span>
-			            	</a>
-			           </li>
-			        </ul>
-		        </div>  
-		</div>
-		<div class="rmain-main">
-			<div class="bodyFile">
-				<div class="myCook">
-					<div class="cook-left"><span id="id-globle">我的资料库</span></div>
-					<div class="cook-right"><button type="button" class="addBtn" id="newRepos"><i class="icon-add-box"></i><span class="iconFont">新建资料库</span></button></div>
-				</div>
-				<div class="noneFile hidden">
-					<h2 class="font-create">您还未创建资料库</h2>
-					<p>你可以新建一个资料库来组织你的文件资料，比如为每个项目创建一个资料库，每个资料库可以单独地同步和共享。</p>
-				</div>
-				<div class="first-table" id="id-repose-content">
-					<table class="file-tab">
-					<thead class="repose">
-						<tr class="tr-border">
-					  	<th class="th-1"><input type="checkbox"/></th>
-					    <th class="th-2">名称</th>
-					    <th class="th-3">操作</th>
-					    <th class="th-4">大小</th>
-					    <th class="th-5">更新时间</th>
-					  </tr>
-					</thead>
-					  <tbody id="repo-table">
-					  
-					  </tbody>
-					 </table>
-				</div>
-			</div>
-			
-			<div class="lookFile hidden">
-				<div class="btn-choose">
-					<button type="button" class="allBtn"><span class="allBtnFont">上传</span></button>
-					<button type="button" class="allBtn" id="id-newfilder"><span class="allBtnFont">新建文件夹</span></button>
-					<button type="button" class="allBtn"><span class="allBtnFont">新建文件</span></button>
-					<span class="trash-file"><i class="icon-bin"></i><i class="icon-alarm"></i></span>
-				</div>
-			</div>
-		</div>
-	</div>  
-</div>  
-<!--footer-->
-<div th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
-<script th:src="@{/static/common/js/jquery.uploadify.js}" type="text/javascript"></script>
-<script th:src="@{/static/common/js/moment.js}" type="text/javascript"></script>
-<script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
-<script th:src="@{/static/system/js/open.js}" type="text/javascript"></script>
-<script th:src="@{/static/system/js/repose_2.js}" type="text/javascript"></script>
-<script th:src="@{/static/system/js/fileOperation.js}" type="text/javascript"></script>
-<script th:src="@{/static/system/js/doctask.js}" type="text/javascript"></script>
+	<!--footer-->
+	<div
+		th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
+	<script th:src="@{/static/common/js/jquery.uploadify.js}"
+		type="text/javascript"></script>
+	<script th:src="@{/static/common/js/moment.js}" type="text/javascript"></script>
+	<script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
+	<script th:src="@{/static/system/js/open.js}" type="text/javascript"></script>
+	<script th:src="@{/static/system/js/repose_2.js}"
+		type="text/javascript"></script>
+	<script th:src="@{/static/system/js/fileOperation.js}"
+		type="text/javascript"></script>
+	<script th:src="@{/static/system/js/doctask.js}" type="text/javascript"></script>
 </body>
 </html>
