--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -96,6 +96,7 @@
 	<script th:src="@{/static/common/js/jquery.uploadify.js}"
 		type="text/javascript"></script>
 	<script th:src="@{/static/common/js/moment.js}" type="text/javascript"></script>
+	<script th:src="@{/static/system/js/common.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/open.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/repose_2.js}"
