--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -77,7 +77,7 @@
 						<a href="javascript:;" class="file">上传文件 <input type="file"
 							name="" id=""/>
 						</a>
-						<button type="button" class="allBtn" id="id-newfilder">
+						<button type="button" class="allBtn" id="popup-new-folder">
 							<span class="allBtnFont">新建文件夹</span>
 						</button>
 						<button type="button" class="allBtn">
