--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -11,8 +11,14 @@
 <link rel="stylesheet" th:href="@{/static/system/css/uploadify.css}" />
 </head>
 <body>
-	<div
-		th:replace="system/pages/common/browser-common.html :: copy-browser">动态复用</div>
+	<div th:replace="system/pages/common/browser-common.html :: copy-browser">动态复用</div>
+	
+	<!-- 上传文件 -->
+	<div class="upload-pack">
+		<div></div>
+	</div>	
+	
+	
 	<div class="container">
 		<div class="container-header">
 			<div
@@ -74,8 +80,7 @@
 
 				<div class="lookFile hidden">
 					<div class="btn-choose">
-						<a href="javascript:;" class="file">上传文件 <input type="file"
-							name="" id=""/>
+						<a href="javascript:;" class="file">上传文件<input id="upload-file" type="file" name="files[]" multiple="multiple" title="Click to add Files">
 						</a>
 						<button type="button" class="allBtn" id="popup-new-folder">
 							<span class="allBtnFont">新建文件夹</span>
@@ -90,15 +95,18 @@
 			</div>
 		</div>
 	</div>
+	
+	
+	
 	<!--footer-->
-	<div
-		th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
+	<div th:replace="system/pages/common/sys-quote-common.html  :: copy-syscommon-footer">此处footer动态复用</div>
 	<script th:src="@{/static/common/js/jquery.uploadify.js}"
 		type="text/javascript"></script>
 	<script th:src="@{/static/common/js/moment.js}" type="text/javascript"></script>
+	<script th:src="@{/static/common/js/jquery-dmuploader/dmuploader.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/common.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
-	<script th:src="@{/static/system/js/open.js}" type="text/javascript"></script>
+	<script th:src="@{/static/system/js/upload-file.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/repose_2.js}"
 		type="text/javascript"></script>
 	<script th:src="@{/static/system/js/fileOperation.js}"
