--- a/resources/static/system/pages/wesign/users/index.html
+++ b/resources/static/system/pages/wesign/users/index.html
@@ -80,7 +80,7 @@
 
 				<div class="lookFile hidden">
 					<div class="btn-choose">
-						<a href="javascript:;" class="file">上传文件<input id="upload-file" type="file" name="files[]" multiple="multiple" title="Click to add Files">
+						<a id="upload-file" href="javascript:;" class="file">上传文件<input onclick="beforeUpload()" type="file" name="file[]" multiple="multiple" title="Click to add Files">
 						</a>
 						<button type="button" class="allBtn" id="popup-new-folder">
 							<span class="allBtnFont">新建文件夹</span>
@@ -106,11 +106,11 @@
 	<script th:src="@{/static/common/js/jquery-dmuploader/dmuploader.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/common.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/layer.js}" type="text/javascript"></script>
-	<script th:src="@{/static/system/js/upload-file.js}" type="text/javascript"></script>
 	<script th:src="@{/static/system/js/repose_2.js}"
 		type="text/javascript"></script>
 	<script th:src="@{/static/system/js/fileOperation.js}"
 		type="text/javascript"></script>
 	<script th:src="@{/static/system/js/doctask.js}" type="text/javascript"></script>
+        <script th:src="@{/static/system/js/upload-file.js}" type="text/javascript"></script>
 </body>
 </html>
